fix: 인스타 공유 버튼 폰트, 상단 margin, gap

--- a/src/styles/MyPage/MyProfile.css
+++ b/src/styles/MyPage/MyProfile.css
@@ -113,7 +113,7 @@
 .profile-card-container {
     display: flex;
     justify-content: center;
-    padding: 40px;
+    padding: 40px 40px 0px 40px;
     width: 100%;
     margin-bottom: 26px;
 }
@@ -129,24 +129,30 @@
     flex-direction: column;
     gap: 12px;
     margin-bottom: 15%;
+    align-content: center;
 }
 
 .insta-share {
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
     gap: 3px;
+
 }
 
 .insta-btn {
     display: flex;
-    align-items: center;
+    gap: 3px;
+    align-content: center;
     padding: 10px 20px;
     border-radius: 20px;
-    background-color: #ffffff;
+    background-color: white;
     border: 1px solid var(--gray03);
     color: var(--gray07);
+
+    font-size: 13px;
+    font-weight: var(--semibold);
+    line-height: 140%;
 
 }
 
